--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,9 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
-    - name: Azure Login
+    - name: Azure Login with Device Code
       run: |
-        az login --username "${{ secrets.AZURE_USERNAME }}" --password "${{ secrets.AZURE_PASSWORD }}"
+        az login --use-device-code
 
  
     # Set the subscription and resource group
